--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -8,3 +8,4 @@ env_logger = "0.11.5"
 log = "0.4.22"
 wgpu = "22.1.0"
 winit = { version = "0.30.4", features = ["rwh_05"] }
+add-one = { path = "../add-one" }
