--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -9,3 +9,7 @@ log = "0.4.22"
 wgpu = "22.1.0"
 winit = { version = "0.29", features = ["rwh_05"] }
 add-one = { path = "../add-one" }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+ 
