--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -9,6 +9,8 @@ log = "0.4.22"
 wgpu = "22.1.0"
 winit = { version = "0.29", features = ["rwh_05"] }
 add-one = { path = "../add-one" }
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
