--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -11,6 +11,7 @@ winit = { version = "0.29", features = ["rwh_05"] }
 add-one = { path = "../add-one" }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
+cfg-if = "1.0.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
