--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -12,6 +12,7 @@ add-one = { path = "../add-one" }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 cfg-if = "1.0.0"
+console_log = "1.0.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
