--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -14,6 +14,7 @@ wasm-bindgen-futures = "0.4.42"
 cfg-if = "1.0.0"
 console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
+web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
