--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -16,6 +16,13 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
+web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }
+
 [lib]
 crate-type = ["cdylib", "rlib"]
  
