--- a/learning-wgpu/Cargo.toml
+++ b/learning-wgpu/Cargo.toml
@@ -16,6 +16,7 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 web-sys = { version = "0.3.69", features = ["Document", "Element", "Window"] }
 image = "0.25.2"
+anyhow = "1.0.86"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
