--- a/wasmsample2/Cargo.toml
+++ b/wasmsample2/Cargo.toml
@@ -3,5 +3,9 @@ name = "wasmsample2"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "wasmsample2"
+path = "src/lib.rs"
+
 [dependencies]
 add-one = { path = "../add-one" }
